api_versioned_docs/version-12.0.0/avalonia/controls/treedatagrid.mdx
---
title: 'TreeDataGrid'
hide_title: true
slug: '/avalonia/controls/treedatagrid'
uid: 'Avalonia.Controls.TreeDataGrid'
commentId: 'T:Avalonia.Controls.TreeDataGrid'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.TreeDataGrid'
assembly: 'Avalonia.Controls.TreeDataGrid'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">TreeDataGrid Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
</div>

<div className="apiref-page__lead">

Represents a control that displays hierarchical and tabular data together in a single view.
It is a combination of a [TreeView](xref:Avalonia.Controls.TreeView) and DataGrid control.

</div>

<div className="apiref-page__signature">

```csharp
public class TreeDataGrid
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="../avaloniaobject">AvaloniaObject</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../animation/animatable">Animatable</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../styledelement">StyledElement</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../visual">Visual</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../layout/layoutable">Layoutable</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../interactivity/interactive">Interactive</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../input/inputelement">InputElement</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="control">Control</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="primitives/templatedcontrol">TemplatedControl</a> <span className="apiref-page__relation-separator">-&gt;</span> TreeDataGrid
</div>
</div>

## Remarks

The [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) supports both flat (2D table) and hierarchical (tree with columns) layouts,
making it suitable for a variety of data visualization needs.

Key features include:

- Supports both row selection and cell selection modes
- Column sorting capabilities
- Support for various column types (Text, [CheckBox](xref:Avalonia.Controls.CheckBox), Template)
- MVVM-first data model
- Drag and drop functionality for rows

## Constructors

| Name | Description |
| --- | --- |
| [TreeDataGrid](#uid-e32f3c3fdf) | Initializes a new instance of the [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) class. |

<section className="apiref-page__member-entry">

<span id="uid-e32f3c3fdf"></span>

### TreeDataGrid Constructor

Initializes a new instance of the [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) class.

```csharp
public TreeDataGrid()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [BeginEdit](#uid-635a28ab33) | Begins editing the cell at the specified column and row indices. |
| [CancelEdit](#uid-4935996e94) | Cancels the current cell edit, restoring the original value. |
| [CommitEdit](#uid-d6fc368cdd) | Commits the current cell edit. |
| [TryGetCell (2 overloads)](#uid-162e69c725) | No summary available. |
| [TryGetRow (2 overloads)](#uid-3c5d9e467a) | No summary available. |
| [TryGetRowModel](#uid-f2a5a207a9) | No summary available. |
| [ApplyTemplate](primitives/templatedcontrol.mdx#uid-cc70dd4d2f) | Creates the visual children of the control, if necessary Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [GetIsTemplateFocusTarget](primitives/templatedcontrol.mdx#uid-75a788f38f) | Gets the value of the IsTemplateFocusTargetProperty attached property on a control. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [SetIsTemplateFocusTarget](primitives/templatedcontrol.mdx#uid-281801c25f) | Sets the value of the IsTemplateFocusTargetProperty attached property on a control. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Focus](../input/inputelement.mdx#uid-6b657af583) | Focuses the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [GetIsHoldWithMouseEnabled](../input/inputelement.mdx#uid-0420943ecd) | Inherited from [InputElement](../input/inputelement.mdx). |
| [GetIsHoldingEnabled](../input/inputelement.mdx#uid-2af9987676) | Inherited from [InputElement](../input/inputelement.mdx). |
| [SetIsHoldWithMouseEnabled](../input/inputelement.mdx#uid-a494efd7c7) | Inherited from [InputElement](../input/inputelement.mdx). |
| [SetIsHoldingEnabled](../input/inputelement.mdx#uid-90a47948ad) | Inherited from [InputElement](../input/inputelement.mdx). |
| [AddHandler (2 overloads)](../interactivity/interactive.mdx#uid-02518f5b3a) | Adds a handler for the specified routed event. Inherited from [Interactive](../interactivity/interactive.mdx). |
| [RaiseEvent](../interactivity/interactive.mdx#uid-d6aba452e6) | Raises a routed event. Inherited from [Interactive](../interactivity/interactive.mdx). |
| [RemoveHandler (2 overloads)](../interactivity/interactive.mdx#uid-456e485be9) | Removes a handler for the specified routed event. Inherited from [Interactive](../interactivity/interactive.mdx). |
| [Arrange](../layout/layoutable.mdx#uid-d7a19ca8f7) | Arranges the control and its children. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [InvalidateArrange](../layout/layoutable.mdx#uid-3e9d4ebe35) | Invalidates the arrangement of the control and queues a new layout pass. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [InvalidateMeasure](../layout/layoutable.mdx#uid-31c6107bb9) | Invalidates the measurement of the control and queues a new layout pass. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [Measure](../layout/layoutable.mdx#uid-1da410eb81) | Carries out a measure of the control. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [UpdateLayout](../layout/layoutable.mdx#uid-529d4a08ea) | Executes a layout pass. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [GetFlowDirection](../visual.mdx#uid-12716acd38) | Gets the value of the attached [Avalonia.Visual.FlowDirectionProperty](xref:Avalonia.Visual.FlowDirectionProperty) on a control. Inherited from [Visual](../visual.mdx). |
| [InvalidateVisual](../visual.mdx#uid-1cd22a7496) | Invalidates the visual and queues a repaint. Inherited from [Visual](../visual.mdx). |
| [Render](../visual.mdx#uid-615917604b) | Renders the visual to a [Avalonia.Media.DrawingContext](xref:Avalonia.Media.DrawingContext). Inherited from [Visual](../visual.mdx). |
| [SetFlowDirection](../visual.mdx#uid-a670b680eb) | Sets the value of the attached [Avalonia.Visual.FlowDirectionProperty](xref:Avalonia.Visual.FlowDirectionProperty) on a control. Inherited from [Visual](../visual.mdx). |
| [ApplyStyling](../styledelement.mdx#uid-b0f81a6f8f) | Applies styling to the control if the control is initialized and styling is not already applied. Inherited from [StyledElement](../styledelement.mdx). |
| [BeginInit](../styledelement.mdx#uid-91c6ccadce) | Inherited from [StyledElement](../styledelement.mdx). |
| [EndInit](../styledelement.mdx#uid-17b450469d) | Inherited from [StyledElement](../styledelement.mdx). |
| [TryGetResource](../styledelement.mdx#uid-2046a6b284) | Inherited from [StyledElement](../styledelement.mdx). |
| [Bind (8 overloads)](../avaloniaobject.mdx#uid-1c60c7bda3) | Binds a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) to an [Avalonia.Data.BindingBase](xref:Avalonia.Data.BindingBase). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CheckAccess](../avaloniaobject.mdx#uid-260ff7a68d) | Returns a value indicating whether the current thread is the UI thread. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [ClearValue (4 overloads)](../avaloniaobject.mdx#uid-41de208fbe) | Clears a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty)'s local value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CoerceValue](../avaloniaobject.mdx#uid-3bec32f39e) | Coerces the specified [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Equals](../avaloniaobject.mdx#uid-a8a8e94305) | Compares two objects using reference equality. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetBaseValue](../avaloniaobject.mdx#uid-9c615efbba) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetHashCode](../avaloniaobject.mdx#uid-7f7db1e7a2) | Gets the hash code for the object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetValue (3 overloads)](../avaloniaobject.mdx#uid-5142cd4792) | Gets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsAnimating](../avaloniaobject.mdx#uid-8cbfc7521a) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is animating. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsSet](../avaloniaobject.mdx#uid-f8bf0bbdcc) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is set on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetCurrentValue (2 overloads)](../avaloniaobject.mdx#uid-38759fd088) | Sets the value of a dependency property without changing its value source. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetValue (3 overloads)](../avaloniaobject.mdx#uid-47d14e19d7) | Sets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [VerifyAccess](../avaloniaobject.mdx#uid-3b9d3c9793) | Checks that the current thread is the UI thread and throws if not. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-635a28ab33"></span>

### BeginEdit Method

Begins editing the cell at the specified column and row indices.

```csharp
public bool BeginEdit(int columnIndex, int rowIndex)
```

#### Parameters

`columnIndex` int

The column index of the cell to edit.


`rowIndex` int

The row index of the cell to edit.


#### Returns

bool

true if the cell entered edit mode; otherwise, false.


</section>

<section className="apiref-page__member-entry">

<span id="uid-4935996e94"></span>

### CancelEdit Method

Cancels the current cell edit, restoring the original value.

```csharp
public bool CancelEdit()
```

#### Returns

bool

true if an edit was cancelled; otherwise, false.


</section>

<section className="apiref-page__member-entry">

<span id="uid-d6fc368cdd"></span>

### CommitEdit Method

Commits the current cell edit.

```csharp
public bool CommitEdit()
```

#### Returns

bool

true if an edit was committed; otherwise, false.


</section>

<span id="uid-162e69c725"></span>

### TryGetCell overloads

<section className="apiref-page__member-entry">

<span id="uid-e3765fa943"></span>

#### TryGetCell Method

```csharp
public bool TryGetCell(Avalonia.Controls.Control element, Avalonia.Controls.Primitives.TreeDataGridCell& result)
```

##### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


`result` [Avalonia.Controls.Primitives.TreeDataGridCell](xref:Avalonia.Controls.Primitives.TreeDataGridCell)&amp;


##### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-a493471e7e"></span>

#### TryGetCell Method

Attempts to retrieve a realized cell at the specified column and row indices.

```csharp
public Avalonia.Controls.Control TryGetCell(int columnIndex, int rowIndex)
```

##### Parameters

`columnIndex` int

The index of the column.


`rowIndex` int

The index of the row.


##### Returns

[Avalonia.Controls.Control](xref:Avalonia.Controls.Control)

The cell at the specified indices, or null if no cell exists at that position.


##### Remarks

The row and column indices are based upon the data currently displayed in the
[TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid), and not the underlying data source. For example, if the data is sorted,
filtered or contains expanded hierarchical rows, the indices may not correspond
directly to the data source. In addition, if the specified cell is not currently
visible (e.g. scrolled out of view), this method will return null.

</section>

<span id="uid-3c5d9e467a"></span>

### TryGetRow overloads

<section className="apiref-page__member-entry">

<span id="uid-e866872be5"></span>

#### TryGetRow Method

```csharp
public bool TryGetRow(Avalonia.Controls.Control element, Avalonia.Controls.Primitives.TreeDataGridRow& result)
```

##### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


`result` [Avalonia.Controls.Primitives.TreeDataGridRow](xref:Avalonia.Controls.Primitives.TreeDataGridRow)&amp;


##### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-923a4746ae"></span>

#### TryGetRow Method

Attempts to retrieve a realized row at the specified index.

```csharp
public Avalonia.Controls.Primitives.TreeDataGridRow TryGetRow(int rowIndex)
```

##### Parameters

`rowIndex` int

The index of the row.


##### Returns

[Avalonia.Controls.Primitives.TreeDataGridRow](xref:Avalonia.Controls.Primitives.TreeDataGridRow)

The row at the specified index, or null if no row exists at that position.


##### Remarks

The row index is based upon the data currently displayed in the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid), and not
the underlying data source. For example, if the data is sorted or filtered, the indices
may not correspond directly to the data source. In addition, if the specified cell is
not currently visible (e.g. scrolled out of view), this method will return null.

</section>

<section className="apiref-page__member-entry">

<span id="uid-f2a5a207a9"></span>

### TryGetRowModel Method

```csharp
public bool TryGetRowModel<TModel>(Avalonia.Controls.Control element, TModel& result)
```

#### Parameters

`element` [Avalonia.Controls.Control](xref:Avalonia.Controls.Control)


`result` TModel&amp;


#### Type Parameters

`TModel`


#### Returns

bool


</section>

## Properties

| Name | Description |
| --- | --- |
| [AllowTriStateSorting](#uid-ce176d03b4) | Gets or sets a value indicating whether the user can cycle through ascending, descending, and unsorted states when clicking the column header. The default is false. |
| [AutoDragDropRows](#uid-4b092765ee) | Gets or sets a value indicating whether rows can be automatically dragged and dropped within the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid). |
| [CanUserResizeColumns](#uid-d56f8d3ce8) | Gets or sets a value indicating whether users can resize columns. |
| [CanUserSortColumns](#uid-6de5243999) | Gets or sets a value indicating whether users can sort columns. |
| [ColumnHeaderTheme](#uid-4c61af28b7) | Gets or sets the theme applied to all column headers. |
| [ColumnHeadersPresenter](#uid-8cb051b956) | Gets the presenter that displays the column headers. |
| [Columns](#uid-8c2d3632de) | Gets the columns defined on the [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid). |
| [ElementFactory](#uid-db718a58f6) | Gets the element factory used to create UI elements for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid). |
| [FrozenColumnCount](#uid-f954232d45) | Gets or sets the number of columns that are frozen on the left side. |
| [ItemsSource](#uid-6c70efb9b0) | Gets or sets the items source for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid). |
| [RowTheme](#uid-a3a91166dc) | Gets or sets the theme applied to all rows. |
| [Rows](#uid-bef5e0069e) | Gets the rows collection of the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid). |
| [RowsPresenter](#uid-6578864b79) | Gets the presenter that displays the rows. |
| [Scroll](#uid-e55c35ca5a) | Gets the scroll viewer that enables scrolling through the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) content. |
| [Selection](#uid-82f771f39e) | Gets the selection model for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid). |
| [SelectionMode](#uid-aee8748a0d) | Gets or sets the selection mode for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid). |
| [ShowColumnHeaders](#uid-20c05bbd03) | Gets or sets a value indicating whether column headers should be displayed. |
| [Source](#uid-1fb6b501cb) | Gets or sets the data source for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid). |
| [Background](primitives/templatedcontrol.mdx#uid-50dbd38ef5) | Gets or sets the brush used to draw the control's background. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BackgroundSizing](primitives/templatedcontrol.mdx#uid-07ef33f604) | Gets or sets how the control's background is drawn relative to the control's border. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BorderBrush](primitives/templatedcontrol.mdx#uid-cf666d3678) | Gets or sets the brush used to draw the control's border. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BorderThickness](primitives/templatedcontrol.mdx#uid-4e2cc431b4) | Gets or sets the thickness of the control's border. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [CornerRadius](primitives/templatedcontrol.mdx#uid-91a447dd4a) | Gets or sets the radius of the border rounded corners. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontFamily](primitives/templatedcontrol.mdx#uid-fc37661323) | Gets or sets the font family used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontFeatures](primitives/templatedcontrol.mdx#uid-1a7abb9411) | Gets or sets the font features turned on/off. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontSize](primitives/templatedcontrol.mdx#uid-0a8445793b) | Gets or sets the size of the control's text in points. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStretch](primitives/templatedcontrol.mdx#uid-f23e3b5938) | Gets or sets the font stretch used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStyle](primitives/templatedcontrol.mdx#uid-0d0ccbde51) | Gets or sets the font style used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontWeight](primitives/templatedcontrol.mdx#uid-967cc71125) | Gets or sets the font weight used to draw the control's text. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Foreground](primitives/templatedcontrol.mdx#uid-dff6480679) | Gets or sets the brush used to draw the control's text and other foreground elements. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [LetterSpacing](primitives/templatedcontrol.mdx#uid-2d96a527e6) | Gets or sets the letter spacing for the control's text content. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Padding](primitives/templatedcontrol.mdx#uid-f5271cd58d) | Gets or sets the padding placed between the border of the control and its content. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Template](primitives/templatedcontrol.mdx#uid-7a289f7bd4) | Gets or sets the template that defines the control's appearance. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [ContextFlyout](control.mdx#uid-3821ce41c2) | Gets or sets a context flyout to the control Inherited from [Control](control.mdx). |
| [ContextMenu](control.mdx#uid-95e5e3ccc3) | Gets or sets a context menu to the control. Inherited from [Control](control.mdx). |
| [DataTemplates](control.mdx#uid-78ff251b26) | Gets or sets the data templates for the control. Inherited from [Control](control.mdx). |
| [FocusAdorner](control.mdx#uid-96de66ccc5) | Gets or sets the control's focus adorner. Inherited from [Control](control.mdx). |
| [IsLoaded](control.mdx#uid-7b8aa52b02) | Gets a value indicating whether the control is fully constructed in the visual tree and both layout and render are complete. Inherited from [Control](control.mdx). |
| [Tag](control.mdx#uid-2790b0c958) | Gets or sets a user-defined object attached to the control. Inherited from [Control](control.mdx). |
| [Cursor](../input/inputelement.mdx#uid-4222de38cf) | Gets or sets associated mouse cursor. Inherited from [InputElement](../input/inputelement.mdx). |
| [Focusable](../input/inputelement.mdx#uid-20168c45b2) | Gets or sets a value indicating whether the control can receive focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [GestureRecognizers](../input/inputelement.mdx#uid-ddee464eee) | Inherited from [InputElement](../input/inputelement.mdx). |
| [IsEffectivelyEnabled](../input/inputelement.mdx#uid-48ba4c0379) | Gets a value indicating whether this control and all its parents are enabled. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsEnabled](../input/inputelement.mdx#uid-31817dbbc9) | Gets or sets a value indicating whether the control is enabled for user interaction. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsFocused](../input/inputelement.mdx#uid-e4cd1a3717) | Gets a value indicating whether the control is focused. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHitTestVisible](../input/inputelement.mdx#uid-11cb006f8b) | Gets or sets a value indicating whether the control is considered for hit testing. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsKeyboardFocusWithin](../input/inputelement.mdx#uid-6e5855b185) | Gets a value indicating whether keyboard focus is anywhere within the element or its visual tree child elements. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsPointerOver](../input/inputelement.mdx#uid-09e1553c00) | Gets a value indicating whether the pointer is currently over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsTabStop](../input/inputelement.mdx#uid-455d73fca4) | Gets or sets a value that indicates whether the control is included in tab navigation. Inherited from [InputElement](../input/inputelement.mdx). |
| [KeyBindings](../input/inputelement.mdx#uid-827a5420b2) | Inherited from [InputElement](../input/inputelement.mdx). |
| [TabIndex](../input/inputelement.mdx#uid-82ec6bf9ac) | Gets or sets a value that determines the order in which elements receive focus when the user navigates through controls by pressing the Tab key. Inherited from [InputElement](../input/inputelement.mdx). |
| [DesiredSize](../layout/layoutable.mdx#uid-5eb61af32f) | Gets the size that this element computed during the measure pass of the layout process. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [Height](../layout/layoutable.mdx#uid-4334ab83b4) | Gets or sets the height of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [HorizontalAlignment](../layout/layoutable.mdx#uid-c621d98d6c) | Gets or sets the element's preferred horizontal alignment in its parent. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [IsArrangeValid](../layout/layoutable.mdx#uid-97d1d86c71) | Gets a value indicating whether the control's layouts arrange is valid. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [IsMeasureValid](../layout/layoutable.mdx#uid-2b3ce6ad30) | Gets a value indicating whether the control's layout measure is valid. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [Margin](../layout/layoutable.mdx#uid-3785e24bed) | Gets or sets the margin around the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxHeight](../layout/layoutable.mdx#uid-6ffe996277) | Gets or sets the maximum height of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxWidth](../layout/layoutable.mdx#uid-ea6041bc57) | Gets or sets the maximum width of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinHeight](../layout/layoutable.mdx#uid-822cd64c83) | Gets or sets the minimum height of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinWidth](../layout/layoutable.mdx#uid-5bd3b5bb2c) | Gets or sets the minimum width of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [UseLayoutRounding](../layout/layoutable.mdx#uid-5998a3d47c) | Gets or sets a value that determines whether the element should be snapped to pixel boundaries at layout time. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [VerticalAlignment](../layout/layoutable.mdx#uid-9652a1b295) | Gets or sets the element's preferred vertical alignment in its parent. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [Width](../layout/layoutable.mdx#uid-491c41475f) | Gets or sets the width of the element. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [Bounds](../visual.mdx#uid-a01c3022f7) | Gets the bounds of the control relative to its parent. Inherited from [Visual](../visual.mdx). |
| [CacheMode](../visual.mdx#uid-c565afad32) | Gets or sets the cache mode of the visual. Inherited from [Visual](../visual.mdx). |
| [Clip](../visual.mdx#uid-7623faaeaf) | Gets or sets the geometry clip for this visual. Inherited from [Visual](../visual.mdx). |
| [ClipToBounds](../visual.mdx#uid-63c348aebd) | Gets or sets a value indicating whether the control should be clipped to its bounds. Inherited from [Visual](../visual.mdx). |
| [Effect](../visual.mdx#uid-65e2be6b7c) | Gets or sets the effect of the control. Inherited from [Visual](../visual.mdx). |
| [FlowDirection](../visual.mdx#uid-c7929bde53) | Gets or sets the text flow direction. Inherited from [Visual](../visual.mdx). |
| [HasMirrorTransform](../visual.mdx#uid-70dc13a730) | Gets or sets a value indicating whether to apply mirror transform on this control. Inherited from [Visual](../visual.mdx). |
| [IsEffectivelyVisible](../visual.mdx#uid-03d6c15a63) | Gets a value indicating whether this control and all its parents are visible. Inherited from [Visual](../visual.mdx). |
| [IsVisible](../visual.mdx#uid-da2b0ca167) | Gets or sets a value indicating whether this control is visible. Inherited from [Visual](../visual.mdx). |
| [Opacity](../visual.mdx#uid-9eaf1e3d57) | Gets or sets the opacity of the control. Inherited from [Visual](../visual.mdx). |
| [OpacityMask](../visual.mdx#uid-b6579b9244) | Gets or sets the opacity mask of the control. Inherited from [Visual](../visual.mdx). |
| [RenderTransform](../visual.mdx#uid-7ee76ff32a) | Gets or sets the render transform of the control. Inherited from [Visual](../visual.mdx). |
| [RenderTransformOrigin](../visual.mdx#uid-3501120c25) | Gets or sets the transform origin of the control. Inherited from [Visual](../visual.mdx). |
| [ZIndex](../visual.mdx#uid-a3275ade9d) | Gets or sets the Z index of the control. Inherited from [Visual](../visual.mdx). |
| [ActualThemeVariant](../styledelement.mdx#uid-776bcbe4bf) | Gets the UI theme that is currently used by the element, which might be different than the RequestedThemeVariantProperty. Inherited from [StyledElement](../styledelement.mdx). |
| [Classes](../styledelement.mdx#uid-b7b7edea05) | Gets or sets the styled element's classes. Inherited from [StyledElement](../styledelement.mdx). |
| [DataContext](../styledelement.mdx#uid-647f924a56) | Gets or sets the control's data context. Inherited from [StyledElement](../styledelement.mdx). |
| [IsInitialized](../styledelement.mdx#uid-59a7cddacb) | Gets a value that indicates whether the element has finished initialization. Inherited from [StyledElement](../styledelement.mdx). |
| [Name](../styledelement.mdx#uid-245f4ccff5) | Gets or sets the name of the styled element. Inherited from [StyledElement](../styledelement.mdx). |
| [Parent](../styledelement.mdx#uid-aad2c5c78d) | Gets the styled element's logical parent. Inherited from [StyledElement](../styledelement.mdx). |
| [Resources](../styledelement.mdx#uid-f6488ca4b7) | Gets or sets the styled element's resource dictionary. Inherited from [StyledElement](../styledelement.mdx). |
| [StyleKey](../styledelement.mdx#uid-081584075e) | Gets the type by which the element is styled. Inherited from [StyledElement](../styledelement.mdx). |
| [Styles](../styledelement.mdx#uid-ae663139cc) | Gets the styles for the styled element. Inherited from [StyledElement](../styledelement.mdx). |
| [TemplatedParent](../styledelement.mdx#uid-dbf6ddacc3) | Gets the styled element whose lookless template this styled element is part of. Inherited from [StyledElement](../styledelement.mdx). |
| [Theme](../styledelement.mdx#uid-1aebed283d) | Gets or sets the theme to be applied to the element. Inherited from [StyledElement](../styledelement.mdx). |
| [Transitions](../animation/animatable.mdx#uid-1b3138f517) | Gets or sets the property transitions for the control. Inherited from [Animatable](../animation/animatable.mdx). |
| [Dispatcher](../avaloniaobject.mdx#uid-b25fa51632) | Returns the [Avalonia.AvaloniaObject.Dispatcher](xref:Avalonia.AvaloniaObject.Dispatcher) that this [Avalonia.AvaloniaObject](xref:Avalonia.AvaloniaObject) is associated with. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Item](../avaloniaobject.mdx#uid-c1d1f1bc0f) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-ce176d03b4"></span>

### AllowTriStateSorting Property

Gets or sets a value indicating whether the user can cycle through ascending,
descending, and unsorted states when clicking the column header. The default is
false.

```csharp
public bool AllowTriStateSorting { get; set; }
```

#### Remarks

When true, clicking a column header will cycle the sort order through ascending,
descending, and unsorted. When false, clicking a column header will cycle the sort
order through ascending and descending only.

This behavior only applies if [Avalonia.Controls.TreeDataGrid.CanUserSortColumns](xref:Avalonia.Controls.TreeDataGrid.CanUserSortColumns) is true.
Individual columns can override this behavior via their
[Avalonia.Controls.TreeDataGridColumn.AllowTriStateSorting](xref:Avalonia.Controls.TreeDataGridColumn.AllowTriStateSorting) property.

</section>

<section className="apiref-page__member-entry">

<span id="uid-4b092765ee"></span>

### AutoDragDropRows Property

Gets or sets a value indicating whether rows can be automatically dragged and dropped
within the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

```csharp
public bool AutoDragDropRows { get; set; }
```

#### Remarks

When enabled, users can reorder rows by dragging them to a new position. Changes will
be reflected in the underlying data source. The default value is false.

</section>

<section className="apiref-page__member-entry">

<span id="uid-d56f8d3ce8"></span>

### CanUserResizeColumns Property

Gets or sets a value indicating whether users can resize columns.

```csharp
public bool CanUserResizeColumns { get; set; }
```

#### Remarks

When true, users can adjust column widths by dragging the column dividers. The default
value is true.

</section>

<section className="apiref-page__member-entry">

<span id="uid-6de5243999"></span>

### CanUserSortColumns Property

Gets or sets a value indicating whether users can sort columns.

```csharp
public bool CanUserSortColumns { get; set; }
```

#### Remarks

When true, clicking on a column header will sort the data by that column. The default
value is true.

</section>

<section className="apiref-page__member-entry">

<span id="uid-4c61af28b7"></span>

### ColumnHeaderTheme Property

Gets or sets the theme applied to all column headers.

```csharp
public Avalonia.Styling.ControlTheme ColumnHeaderTheme { get; set; }
```

#### Remarks

This theme controls the appearance of column header elements in the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

</section>

<section className="apiref-page__member-entry">

<span id="uid-8cb051b956"></span>

### ColumnHeadersPresenter Property

Gets the presenter that displays the column headers.

```csharp
public Avalonia.Controls.Primitives.TreeDataGridColumnHeadersPresenter ColumnHeadersPresenter { get; set; }
```

#### Remarks

The column headers presenter is defined in the control template and is responsible
for rendering the column headers at the top of the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

</section>

<section className="apiref-page__member-entry">

<span id="uid-8c2d3632de"></span>

### Columns Property

Gets the columns defined on the [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

```csharp
public Avalonia.Controls.TreeDataGridColumns Columns { get; set; }
```

#### Remarks

This property can be populated in XAML or read from the [Avalonia.Controls.TreeDataGrid.Source](xref:Avalonia.Controls.TreeDataGrid.Source).

</section>

<section className="apiref-page__member-entry">

<span id="uid-db718a58f6"></span>

### ElementFactory Property

Gets the element factory used to create UI elements for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

```csharp
public Avalonia.Controls.Primitives.TreeDataGridElementFactory ElementFactory { get; set; }
```

#### Remarks

The element factory is responsible for creating the visual elements that represent
rows, cells, and other components of the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

</section>

<section className="apiref-page__member-entry">

<span id="uid-f954232d45"></span>

### FrozenColumnCount Property

Gets or sets the number of columns that are frozen on the left side.

```csharp
public int FrozenColumnCount { get; set; }
```

#### Remarks

Frozen columns do not scroll horizontally and remain visible at all times.

The default value is 0, meaning no columns are frozen. A value greater than
the total column count will freeze all columns.

</section>

<section className="apiref-page__member-entry">

<span id="uid-6c70efb9b0"></span>

### ItemsSource Property

Gets or sets the items source for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

```csharp
public System.Collections.IEnumerable ItemsSource { get; set; }
```

#### Remarks

When set, a [Avalonia.Controls.FlatTreeDataGridSource&lt;T&gt;](xref:Avalonia.Controls.FlatTreeDataGridSource%601)
is automatically created using the XAML-defined
[Avalonia.Controls.TreeDataGrid.Columns](xref:Avalonia.Controls.TreeDataGrid.Columns) and assigned to [Avalonia.Controls.TreeDataGrid.Source](xref:Avalonia.Controls.TreeDataGrid.Source).

This property is mutually exclusive with setting
[Avalonia.Controls.TreeDataGrid.Source](xref:Avalonia.Controls.TreeDataGrid.Source) directly.

</section>

<section className="apiref-page__member-entry">

<span id="uid-a3a91166dc"></span>

### RowTheme Property

Gets or sets the theme applied to all rows.

```csharp
public Avalonia.Styling.ControlTheme RowTheme { get; set; }
```

#### Remarks

This theme controls the appearance of row elements in the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

</section>

<section className="apiref-page__member-entry">

<span id="uid-bef5e0069e"></span>

### Rows Property

Gets the rows collection of the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

```csharp
public Avalonia.Controls.TreeDataGridRows Rows { get; set; }
```

#### Remarks

This property is automatically populated from the [Avalonia.Controls.TreeDataGrid.Source](xref:Avalonia.Controls.TreeDataGrid.Source).

</section>

<section className="apiref-page__member-entry">

<span id="uid-6578864b79"></span>

### RowsPresenter Property

Gets the presenter that displays the rows.

```csharp
public Avalonia.Controls.Primitives.TreeDataGridRowsPresenter RowsPresenter { get; set; }
```

#### Remarks

The rows presenter is defined in the control template and is responsible for rendering
the rows of data in the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

</section>

<section className="apiref-page__member-entry">

<span id="uid-e55c35ca5a"></span>

### Scroll Property

Gets the scroll viewer that enables scrolling through the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) content.

```csharp
public Avalonia.Controls.Primitives.IScrollable Scroll { get; set; }
```

#### Remarks

The scroll viewer is defined in the control template and provides vertical and
horizontal scrolling capabilities for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

</section>

<section className="apiref-page__member-entry">

<span id="uid-82f771f39e"></span>

### Selection Property

Gets the selection model for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

```csharp
public Avalonia.Controls.Selection.TreeDataGridSelectionModel Selection { get; set; }
```

#### Remarks

To access the strongly-typed selection model, cast to the appropriate type. In the case
where [Avalonia.Controls.TreeDataGrid.Source](xref:Avalonia.Controls.TreeDataGrid.Source) is set, the selection model type is determined by the source.
When [Avalonia.Controls.TreeDataGrid.ItemsSource](xref:Avalonia.Controls.TreeDataGrid.ItemsSource) is set, the selection object will be a
`TreeDataGridRowSelectionModel<object>` or a
`TreeDataGridCellSelectionModel<object>` depending on
[Avalonia.Controls.TreeDataGrid.SelectionMode](xref:Avalonia.Controls.TreeDataGrid.SelectionMode).

</section>

<section className="apiref-page__member-entry">

<span id="uid-aee8748a0d"></span>

### SelectionMode Property

Gets or sets the selection mode for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

```csharp
public Avalonia.Controls.TreeDataGridSelectionMode SelectionMode { get; set; }
```

#### Remarks

Note that this property cannot be set when [Avalonia.Controls.TreeDataGrid.Source](xref:Avalonia.Controls.TreeDataGrid.Source) is set directly; the
selection must be configured on the source itself in this case.

</section>

<section className="apiref-page__member-entry">

<span id="uid-20c05bbd03"></span>

### ShowColumnHeaders Property

Gets or sets a value indicating whether column headers should be displayed.

```csharp
public bool ShowColumnHeaders { get; set; }
```

#### Remarks

The default value is true.

</section>

<section className="apiref-page__member-entry">

<span id="uid-1fb6b501cb"></span>

### Source Property

Gets or sets the data source for the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

```csharp
public Avalonia.Controls.TreeDataGridSource Source { get; set; }
```

#### Remarks

The source provides the data model, columns, and rows to be displayed in the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

Use [Avalonia.Controls.FlatTreeDataGridSource&lt;T&gt;](xref:Avalonia.Controls.FlatTreeDataGridSource%601) for flat data or
[Avalonia.Controls.HierarchicalTreeDataGridSource&lt;T&gt;](xref:Avalonia.Controls.HierarchicalTreeDataGridSource%601) for hierarchical data.

</section>

## Fields

| Name | Description |
| --- | --- |
| [AllowTriStateSortingProperty](#uid-24f91fa179) | Defines the [Avalonia.Controls.TreeDataGrid.AllowTriStateSorting](xref:Avalonia.Controls.TreeDataGrid.AllowTriStateSorting) property. |
| [AutoDragDropRowsProperty](#uid-c45a04f60e) | Defines the [Avalonia.Controls.TreeDataGrid.AutoDragDropRows](xref:Avalonia.Controls.TreeDataGrid.AutoDragDropRows) property. |
| [CanUserResizeColumnsProperty](#uid-1ddce24d98) | Defines the [Avalonia.Controls.TreeDataGrid.CanUserResizeColumns](xref:Avalonia.Controls.TreeDataGrid.CanUserResizeColumns) property. |
| [CanUserSortColumnsProperty](#uid-b703e93a38) | Defines the [Avalonia.Controls.TreeDataGrid.CanUserSortColumns](xref:Avalonia.Controls.TreeDataGrid.CanUserSortColumns) property. |
| [ColumnHeaderThemeProperty](#uid-74dbc67f86) | Defines the [Avalonia.Controls.TreeDataGrid.ColumnHeaderTheme](xref:Avalonia.Controls.TreeDataGrid.ColumnHeaderTheme) property. |
| [ColumnsProperty](#uid-fd37c352e3) | Defines the [Avalonia.Controls.TreeDataGrid.Columns](xref:Avalonia.Controls.TreeDataGrid.Columns) property. |
| [ElementFactoryProperty](#uid-8b3689e9f4) | Defines the [Avalonia.Controls.TreeDataGrid.ElementFactory](xref:Avalonia.Controls.TreeDataGrid.ElementFactory) property. |
| [FrozenColumnCountProperty](#uid-fed18432d2) | Defines the [Avalonia.Controls.TreeDataGrid.FrozenColumnCount](xref:Avalonia.Controls.TreeDataGrid.FrozenColumnCount) property. |
| [ItemsSourceProperty](#uid-3ea6fd37c9) | Defines the [Avalonia.Controls.TreeDataGrid.ItemsSource](xref:Avalonia.Controls.TreeDataGrid.ItemsSource) property. |
| [RowDragOverEvent](#uid-72916572e8) | Defines the [Avalonia.Controls.TreeDataGrid.RowDragOver](xref:Avalonia.Controls.TreeDataGrid.RowDragOver) event. |
| [RowDragStartedEvent](#uid-c209c5ad1b) | Defines the [Avalonia.Controls.TreeDataGrid.RowDragStarted](xref:Avalonia.Controls.TreeDataGrid.RowDragStarted) event. |
| [RowDropEvent](#uid-8fc7fd2958) | Defines the [Avalonia.Controls.TreeDataGrid.RowDrop](xref:Avalonia.Controls.TreeDataGrid.RowDrop) event. |
| [RowThemeProperty](#uid-c5d4ac0415) | Defines the [Avalonia.Controls.TreeDataGrid.RowTheme](xref:Avalonia.Controls.TreeDataGrid.RowTheme) property. |
| [RowsProperty](#uid-5509310c09) | Defines the [Avalonia.Controls.TreeDataGrid.Rows](xref:Avalonia.Controls.TreeDataGrid.Rows) property. |
| [ScrollProperty](#uid-08cc70c372) | Defines the [Avalonia.Controls.TreeDataGrid.Scroll](xref:Avalonia.Controls.TreeDataGrid.Scroll) property. |
| [SelectionModeProperty](#uid-65bed0bf35) | Defines the [Avalonia.Controls.TreeDataGrid.SelectionMode](xref:Avalonia.Controls.TreeDataGrid.SelectionMode) property. |
| [ShowColumnHeadersProperty](#uid-9f04ca0697) | Defines the [Avalonia.Controls.TreeDataGrid.ShowColumnHeaders](xref:Avalonia.Controls.TreeDataGrid.ShowColumnHeaders) property. |
| [SourceProperty](#uid-9674443eba) | Defines the [Avalonia.Controls.TreeDataGrid.Source](xref:Avalonia.Controls.TreeDataGrid.Source) property. |
| [BackgroundProperty](primitives/templatedcontrol.mdx#uid-dbbd1ffb9b) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Background](xref:Avalonia.Controls.Primitives.TemplatedControl.Background) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BackgroundSizingProperty](primitives/templatedcontrol.mdx#uid-316d7708c4) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BackgroundSizing](xref:Avalonia.Controls.Primitives.TemplatedControl.BackgroundSizing) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BorderBrushProperty](primitives/templatedcontrol.mdx#uid-a4e6335f37) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BorderBrush](xref:Avalonia.Controls.Primitives.TemplatedControl.BorderBrush) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [BorderThicknessProperty](primitives/templatedcontrol.mdx#uid-c41e10c675) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.BorderThickness](xref:Avalonia.Controls.Primitives.TemplatedControl.BorderThickness) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [CornerRadiusProperty](primitives/templatedcontrol.mdx#uid-c7cdbfc75d) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.CornerRadius](xref:Avalonia.Controls.Primitives.TemplatedControl.CornerRadius) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontFamilyProperty](primitives/templatedcontrol.mdx#uid-fefa977c48) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontFamily](xref:Avalonia.Controls.Primitives.TemplatedControl.FontFamily) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontFeaturesProperty](primitives/templatedcontrol.mdx#uid-54c52748f8) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontFeaturesProperty](xref:Avalonia.Controls.Primitives.TemplatedControl.FontFeaturesProperty) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontSizeProperty](primitives/templatedcontrol.mdx#uid-c06c71299f) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontSize](xref:Avalonia.Controls.Primitives.TemplatedControl.FontSize) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStretchProperty](primitives/templatedcontrol.mdx#uid-d4a988cc8c) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontWeight](xref:Avalonia.Controls.Primitives.TemplatedControl.FontWeight) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontStyleProperty](primitives/templatedcontrol.mdx#uid-14162a470d) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontStyle](xref:Avalonia.Controls.Primitives.TemplatedControl.FontStyle) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [FontWeightProperty](primitives/templatedcontrol.mdx#uid-b911f20b9f) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.FontWeight](xref:Avalonia.Controls.Primitives.TemplatedControl.FontWeight) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [ForegroundProperty](primitives/templatedcontrol.mdx#uid-65cd93050b) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Foreground](xref:Avalonia.Controls.Primitives.TemplatedControl.Foreground) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [IsTemplateFocusTargetProperty](primitives/templatedcontrol.mdx#uid-e50dcff99d) | Defines the IsTemplateFocusTarget attached property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [LetterSpacingProperty](primitives/templatedcontrol.mdx#uid-cd0904df0e) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.LetterSpacing](xref:Avalonia.Controls.Primitives.TemplatedControl.LetterSpacing) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [PaddingProperty](primitives/templatedcontrol.mdx#uid-8836c61358) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Padding](xref:Avalonia.Controls.Primitives.TemplatedControl.Padding) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [TemplateAppliedEvent](primitives/templatedcontrol.mdx#uid-8ed6368102) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.TemplateApplied](xref:Avalonia.Controls.Primitives.TemplatedControl.TemplateApplied) routed event. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [TemplateProperty](primitives/templatedcontrol.mdx#uid-888470a301) | Defines the [Avalonia.Controls.Primitives.TemplatedControl.Template](xref:Avalonia.Controls.Primitives.TemplatedControl.Template) property. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [ContextFlyoutProperty](control.mdx#uid-7adf3cc0e6) | Defines the [Avalonia.Controls.Control.ContextFlyout](xref:Avalonia.Controls.Control.ContextFlyout) property Inherited from [Control](control.mdx). |
| [ContextMenuProperty](control.mdx#uid-0fd2af59c9) | Defines the [Avalonia.Controls.Control.ContextMenu](xref:Avalonia.Controls.Control.ContextMenu) property. Inherited from [Control](control.mdx). |
| [FocusAdornerProperty](control.mdx#uid-701a7e7e23) | Defines the [Avalonia.Controls.Control.FocusAdorner](xref:Avalonia.Controls.Control.FocusAdorner) property. Inherited from [Control](control.mdx). |
| [LoadedEvent](control.mdx#uid-f76afcf3e6) | Defines the [Avalonia.Controls.Control.Loaded](xref:Avalonia.Controls.Control.Loaded) event. Inherited from [Control](control.mdx). |
| [RequestBringIntoViewEvent](control.mdx#uid-e52a870608) | Event raised when an element wishes to be scrolled into view. Inherited from [Control](control.mdx). |
| [SizeChangedEvent](control.mdx#uid-7d071894f4) | Defines the [Avalonia.Controls.Control.SizeChanged](xref:Avalonia.Controls.Control.SizeChanged) event. Inherited from [Control](control.mdx). |
| [TagProperty](control.mdx#uid-291b4a3b79) | Defines the [Avalonia.Controls.Control.Tag](xref:Avalonia.Controls.Control.Tag) property. Inherited from [Control](control.mdx). |
| [UnloadedEvent](control.mdx#uid-382a8f6733) | Defines the [Avalonia.Controls.Control.Unloaded](xref:Avalonia.Controls.Control.Unloaded) event. Inherited from [Control](control.mdx). |
| [ContextCanceledEvent](../input/inputelement.mdx#uid-c58107fdb9) | Provides event data for the [Avalonia.Input.InputElement.ContextCanceled](xref:Avalonia.Input.InputElement.ContextCanceled) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ContextRequestedEvent](../input/inputelement.mdx#uid-11362fc1dd) | Provides event data for the [Avalonia.Input.InputElement.ContextRequested](xref:Avalonia.Input.InputElement.ContextRequested) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [CursorProperty](../input/inputelement.mdx#uid-37a51ae89c) | Gets or sets associated mouse cursor. Inherited from [InputElement](../input/inputelement.mdx). |
| [DoubleTappedEvent](../input/inputelement.mdx#uid-932047336f) | Defines the [Avalonia.Input.InputElement.DoubleTapped](xref:Avalonia.Input.InputElement.DoubleTapped) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [FocusableProperty](../input/inputelement.mdx#uid-402835abd7) | Defines the [Avalonia.Input.InputElement.Focusable](xref:Avalonia.Input.InputElement.Focusable) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [GettingFocusEvent](../input/inputelement.mdx#uid-23a6940484) | Defines the [Avalonia.Input.InputElement.GettingFocus](xref:Avalonia.Input.InputElement.GettingFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [GotFocusEvent](../input/inputelement.mdx#uid-750ce32b53) | Defines the [Avalonia.Input.InputElement.GotFocus](xref:Avalonia.Input.InputElement.GotFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [HoldingEvent](../input/inputelement.mdx#uid-b1eab1bcd8) | Defines the [Avalonia.Input.InputElement.Holding](xref:Avalonia.Input.InputElement.Holding) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsEffectivelyEnabledProperty](../input/inputelement.mdx#uid-df18a2cff1) | Defines the [Avalonia.Input.InputElement.IsEffectivelyEnabled](xref:Avalonia.Input.InputElement.IsEffectivelyEnabled) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsEnabledProperty](../input/inputelement.mdx#uid-2f2893a804) | Defines the [Avalonia.Input.InputElement.IsEnabled](xref:Avalonia.Input.InputElement.IsEnabled) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsFocusedProperty](../input/inputelement.mdx#uid-ec811cc35b) | Defines the [Avalonia.Input.InputElement.IsFocused](xref:Avalonia.Input.InputElement.IsFocused) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHitTestVisibleProperty](../input/inputelement.mdx#uid-e774aa17ad) | Defines the [Avalonia.Input.InputElement.IsHitTestVisible](xref:Avalonia.Input.InputElement.IsHitTestVisible) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHoldWithMouseEnabledProperty](../input/inputelement.mdx#uid-3f460ccdfe) | Defines the IsHoldWithMouseEnabled attached property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsHoldingEnabledProperty](../input/inputelement.mdx#uid-a893be5e44) | Defines the IsHoldingEnabled attached property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsKeyboardFocusWithinProperty](../input/inputelement.mdx#uid-2dc1dd0d3d) | Defines the [Avalonia.Input.InputElement.IsKeyboardFocusWithin](xref:Avalonia.Input.InputElement.IsKeyboardFocusWithin) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsPointerOverProperty](../input/inputelement.mdx#uid-be6c8adde2) | Defines the [Avalonia.Input.InputElement.IsPointerOver](xref:Avalonia.Input.InputElement.IsPointerOver) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [IsTabStopProperty](../input/inputelement.mdx#uid-ed162e7441) | Defines the [Avalonia.Input.InputElement.IsTabStop](xref:Avalonia.Input.InputElement.IsTabStop) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [KeyDownEvent](../input/inputelement.mdx#uid-71dfb758e3) | Defines the [Avalonia.Input.InputElement.KeyDown](xref:Avalonia.Input.InputElement.KeyDown) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [KeyUpEvent](../input/inputelement.mdx#uid-e694f9abc6) | Defines the [Avalonia.Input.InputElement.KeyUp](xref:Avalonia.Input.InputElement.KeyUp) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [LosingFocusEvent](../input/inputelement.mdx#uid-6ed71d3568) | Defines the [Avalonia.Input.InputElement.LosingFocus](xref:Avalonia.Input.InputElement.LosingFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [LostFocusEvent](../input/inputelement.mdx#uid-267344bb96) | Defines the [Avalonia.Input.InputElement.LostFocus](xref:Avalonia.Input.InputElement.LostFocus) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PinchEndedEvent](../input/inputelement.mdx#uid-3f6a3485dd) | Defines the [Avalonia.Input.InputElement.PinchEnded](xref:Avalonia.Input.InputElement.PinchEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PinchEvent](../input/inputelement.mdx#uid-d109d8c674) | Defines the [Avalonia.Input.InputElement.Pinch](xref:Avalonia.Input.InputElement.Pinch) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerCaptureLostEvent](../input/inputelement.mdx#uid-e76450a6b8) | Defines the [Avalonia.Input.InputElement.PointerCaptureLost](xref:Avalonia.Input.InputElement.PointerCaptureLost) routed event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerEnteredEvent](../input/inputelement.mdx#uid-ff4d54fcc4) | Defines the [Avalonia.Input.InputElement.PointerEntered](xref:Avalonia.Input.InputElement.PointerEntered) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerExitedEvent](../input/inputelement.mdx#uid-fc90c076e6) | Defines the [Avalonia.Input.InputElement.PointerExited](xref:Avalonia.Input.InputElement.PointerExited) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerMovedEvent](../input/inputelement.mdx#uid-559b3b80ee) | Defines the [Avalonia.Input.InputElement.PointerMoved](xref:Avalonia.Input.InputElement.PointerMoved) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerPressedEvent](../input/inputelement.mdx#uid-3b7a47d5fd) | Defines the [Avalonia.Input.InputElement.PointerPressed](xref:Avalonia.Input.InputElement.PointerPressed) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerReleasedEvent](../input/inputelement.mdx#uid-f5b0e74f53) | Defines the [Avalonia.Input.InputElement.PointerReleased](xref:Avalonia.Input.InputElement.PointerReleased) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureMagnifyEvent](../input/inputelement.mdx#uid-72785e777d) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureMagnify](xref:Avalonia.Input.InputElement.PointerTouchPadGestureMagnify) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureRotateEvent](../input/inputelement.mdx#uid-409dcc6358) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureRotate](xref:Avalonia.Input.InputElement.PointerTouchPadGestureRotate) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureSwipeEvent](../input/inputelement.mdx#uid-959da18351) | Defines the [Avalonia.Input.InputElement.PointerTouchPadGestureSwipe](xref:Avalonia.Input.InputElement.PointerTouchPadGestureSwipe) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerWheelChangedEvent](../input/inputelement.mdx#uid-dcb45add6a) | Defines the [Avalonia.Input.InputElement.PointerWheelChanged](xref:Avalonia.Input.InputElement.PointerWheelChanged) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PullGestureEndedEvent](../input/inputelement.mdx#uid-274f53878f) | Defines the [Avalonia.Input.InputElement.PullGestureEnded](xref:Avalonia.Input.InputElement.PullGestureEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [PullGestureEvent](../input/inputelement.mdx#uid-b9a60d43c7) | Defines the [Avalonia.Input.InputElement.PullGesture](xref:Avalonia.Input.InputElement.PullGesture) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [RightTappedEvent](../input/inputelement.mdx#uid-a67d4b1367) | Defines the [Avalonia.Input.InputElement.RightTapped](xref:Avalonia.Input.InputElement.RightTapped) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureEndedEvent](../input/inputelement.mdx#uid-5f3e85c372) | Defines the [Avalonia.Input.InputElement.ScrollGestureEnded](xref:Avalonia.Input.InputElement.ScrollGestureEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureEvent](../input/inputelement.mdx#uid-d098469113) | Defines the [Avalonia.Input.InputElement.ScrollGesture](xref:Avalonia.Input.InputElement.ScrollGesture) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureInertiaStartingEvent](../input/inputelement.mdx#uid-02f504d2ea) | Defines the [Avalonia.Input.InputElement.ScrollGestureInertiaStarting](xref:Avalonia.Input.InputElement.ScrollGestureInertiaStarting) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [SwipeGestureEndedEvent](../input/inputelement.mdx#uid-8492058651) | Defines the [Avalonia.Input.InputElement.SwipeGestureEnded](xref:Avalonia.Input.InputElement.SwipeGestureEnded) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [SwipeGestureEvent](../input/inputelement.mdx#uid-e431c01e95) | Defines the [Avalonia.Input.InputElement.SwipeGesture](xref:Avalonia.Input.InputElement.SwipeGesture) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [TabIndexProperty](../input/inputelement.mdx#uid-3708b5bfca) | Defines the [Avalonia.Input.InputElement.TabIndex](xref:Avalonia.Input.InputElement.TabIndex) property. Inherited from [InputElement](../input/inputelement.mdx). |
| [TappedEvent](../input/inputelement.mdx#uid-15efc26145) | Defines the [Avalonia.Input.InputElement.Tapped](xref:Avalonia.Input.InputElement.Tapped) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [TextInputEvent](../input/inputelement.mdx#uid-b82dd03ac9) | Defines the [Avalonia.Input.InputElement.TextInput](xref:Avalonia.Input.InputElement.TextInput) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [TextInputMethodClientRequestedEvent](../input/inputelement.mdx#uid-679852bb37) | Defines the [Avalonia.Input.InputElement.TextInputMethodClientRequested](xref:Avalonia.Input.InputElement.TextInputMethodClientRequested) event. Inherited from [InputElement](../input/inputelement.mdx). |
| [DesiredSizeProperty](../layout/layoutable.mdx#uid-b46bed86fe) | Defines the [Avalonia.Layout.Layoutable.DesiredSize](xref:Avalonia.Layout.Layoutable.DesiredSize) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [HeightProperty](../layout/layoutable.mdx#uid-78fa90222f) | Defines the [Avalonia.Layout.Layoutable.Height](xref:Avalonia.Layout.Layoutable.Height) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [HorizontalAlignmentProperty](../layout/layoutable.mdx#uid-43606c2354) | Defines the [Avalonia.Layout.Layoutable.HorizontalAlignment](xref:Avalonia.Layout.Layoutable.HorizontalAlignment) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MarginProperty](../layout/layoutable.mdx#uid-e730ad0d44) | Defines the [Avalonia.Layout.Layoutable.Margin](xref:Avalonia.Layout.Layoutable.Margin) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxHeightProperty](../layout/layoutable.mdx#uid-0a0a1f20cb) | Defines the [Avalonia.Layout.Layoutable.MaxHeight](xref:Avalonia.Layout.Layoutable.MaxHeight) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MaxWidthProperty](../layout/layoutable.mdx#uid-febdea8f4d) | Defines the [Avalonia.Layout.Layoutable.MaxWidth](xref:Avalonia.Layout.Layoutable.MaxWidth) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinHeightProperty](../layout/layoutable.mdx#uid-f78bf9b812) | Defines the [Avalonia.Layout.Layoutable.MinHeight](xref:Avalonia.Layout.Layoutable.MinHeight) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [MinWidthProperty](../layout/layoutable.mdx#uid-ec0935c392) | Defines the [Avalonia.Layout.Layoutable.MinWidth](xref:Avalonia.Layout.Layoutable.MinWidth) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [UseLayoutRoundingProperty](../layout/layoutable.mdx#uid-e6d86b68b5) | Defines the [Avalonia.Layout.Layoutable.UseLayoutRounding](xref:Avalonia.Layout.Layoutable.UseLayoutRounding) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [VerticalAlignmentProperty](../layout/layoutable.mdx#uid-b50722555e) | Defines the [Avalonia.Layout.Layoutable.VerticalAlignment](xref:Avalonia.Layout.Layoutable.VerticalAlignment) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [WidthProperty](../layout/layoutable.mdx#uid-6f3212affd) | Defines the [Avalonia.Layout.Layoutable.Width](xref:Avalonia.Layout.Layoutable.Width) property. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [BoundsProperty](../visual.mdx#uid-f22a27348f) | Defines the [Avalonia.Visual.Bounds](xref:Avalonia.Visual.Bounds) property. Inherited from [Visual](../visual.mdx). |
| [CacheModeProperty](../visual.mdx#uid-5c89b0f2fc) | Defines the [Avalonia.Visual.CacheMode](xref:Avalonia.Visual.CacheMode) property. Inherited from [Visual](../visual.mdx). |
| [ClipProperty](../visual.mdx#uid-06ffce3308) | Defines the [Avalonia.Visual.Clip](xref:Avalonia.Visual.Clip) property. Inherited from [Visual](../visual.mdx). |
| [ClipToBoundsProperty](../visual.mdx#uid-4bc41df166) | Defines the [Avalonia.Visual.ClipToBounds](xref:Avalonia.Visual.ClipToBounds) property. Inherited from [Visual](../visual.mdx). |
| [EffectProperty](../visual.mdx#uid-9374086bff) | Defines the [Avalonia.Visual.Effect](xref:Avalonia.Visual.Effect) property. Inherited from [Visual](../visual.mdx). |
| [FlowDirectionProperty](../visual.mdx#uid-79d00f257f) | Defines the [Avalonia.Visual.FlowDirection](xref:Avalonia.Visual.FlowDirection) property. Inherited from [Visual](../visual.mdx). |
| [HasMirrorTransformProperty](../visual.mdx#uid-1f37ec4745) | Defines the [Avalonia.Visual.HasMirrorTransform](xref:Avalonia.Visual.HasMirrorTransform) property. Inherited from [Visual](../visual.mdx). |
| [IsVisibleProperty](../visual.mdx#uid-8e0edf21ac) | Defines the [Avalonia.Visual.IsVisible](xref:Avalonia.Visual.IsVisible) property. Inherited from [Visual](../visual.mdx). |
| [OpacityMaskProperty](../visual.mdx#uid-aad2c3f7c2) | Defines the [Avalonia.Visual.OpacityMask](xref:Avalonia.Visual.OpacityMask) property. Inherited from [Visual](../visual.mdx). |
| [OpacityProperty](../visual.mdx#uid-2a53e27b1f) | Defines the [Avalonia.Visual.Opacity](xref:Avalonia.Visual.Opacity) property. Inherited from [Visual](../visual.mdx). |
| [RenderTransformOriginProperty](../visual.mdx#uid-963d266cdd) | Defines the [Avalonia.Visual.RenderTransformOrigin](xref:Avalonia.Visual.RenderTransformOrigin) property. Inherited from [Visual](../visual.mdx). |
| [RenderTransformProperty](../visual.mdx#uid-31d20942c2) | Defines the [Avalonia.Visual.RenderTransform](xref:Avalonia.Visual.RenderTransform) property. Inherited from [Visual](../visual.mdx). |
| [VisualParentProperty](../visual.mdx#uid-12214f81b9) | Defines the [Avalonia.Visual.VisualParent](xref:Avalonia.Visual.VisualParent) property. Inherited from [Visual](../visual.mdx). |
| [ZIndexProperty](../visual.mdx#uid-1dc9376c1e) | Defines the [Avalonia.Visual.ZIndex](xref:Avalonia.Visual.ZIndex) property. Inherited from [Visual](../visual.mdx). |
| [DataContextProperty](../styledelement.mdx#uid-7eefabb929) | Defines the [Avalonia.StyledElement.DataContext](xref:Avalonia.StyledElement.DataContext) property. Inherited from [StyledElement](../styledelement.mdx). |
| [NameProperty](../styledelement.mdx#uid-bcdbb9de56) | Defines the [Avalonia.StyledElement.Name](xref:Avalonia.StyledElement.Name) property. Inherited from [StyledElement](../styledelement.mdx). |
| [ParentProperty](../styledelement.mdx#uid-dc6481a488) | Defines the [Avalonia.StyledElement.Parent](xref:Avalonia.StyledElement.Parent) property. Inherited from [StyledElement](../styledelement.mdx). |
| [TemplatedParentProperty](../styledelement.mdx#uid-a2c7149a6b) | Defines the [Avalonia.StyledElement.TemplatedParent](xref:Avalonia.StyledElement.TemplatedParent) property. Inherited from [StyledElement](../styledelement.mdx). |
| [ThemeProperty](../styledelement.mdx#uid-05852d7b9a) | Defines the [Avalonia.StyledElement.Theme](xref:Avalonia.StyledElement.Theme) property. Inherited from [StyledElement](../styledelement.mdx). |
| [TransitionsProperty](../animation/animatable.mdx#uid-c79f18fac2) | Defines the [Avalonia.Animation.Animatable.Transitions](xref:Avalonia.Animation.Animatable.Transitions) property. Inherited from [Animatable](../animation/animatable.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-24f91fa179"></span>

### AllowTriStateSortingProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.AllowTriStateSorting](xref:Avalonia.Controls.TreeDataGrid.AllowTriStateSorting) property.

```csharp
public Avalonia.StyledProperty<bool> AllowTriStateSortingProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c45a04f60e"></span>

### AutoDragDropRowsProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.AutoDragDropRows](xref:Avalonia.Controls.TreeDataGrid.AutoDragDropRows) property.

```csharp
public Avalonia.StyledProperty<bool> AutoDragDropRowsProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-1ddce24d98"></span>

### CanUserResizeColumnsProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.CanUserResizeColumns](xref:Avalonia.Controls.TreeDataGrid.CanUserResizeColumns) property.

```csharp
public Avalonia.StyledProperty<bool> CanUserResizeColumnsProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b703e93a38"></span>

### CanUserSortColumnsProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.CanUserSortColumns](xref:Avalonia.Controls.TreeDataGrid.CanUserSortColumns) property.

```csharp
public Avalonia.StyledProperty<bool> CanUserSortColumnsProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-74dbc67f86"></span>

### ColumnHeaderThemeProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.ColumnHeaderTheme](xref:Avalonia.Controls.TreeDataGrid.ColumnHeaderTheme) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Styling.ControlTheme> ColumnHeaderThemeProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-fd37c352e3"></span>

### ColumnsProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.Columns](xref:Avalonia.Controls.TreeDataGrid.Columns) property.

```csharp
public Avalonia.DirectProperty<Avalonia.Controls.TreeDataGrid, Avalonia.Controls.TreeDataGridColumns> ColumnsProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8b3689e9f4"></span>

### ElementFactoryProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.ElementFactory](xref:Avalonia.Controls.TreeDataGrid.ElementFactory) property.

```csharp
public Avalonia.DirectProperty<Avalonia.Controls.TreeDataGrid, Avalonia.Controls.Primitives.TreeDataGridElementFactory> ElementFactoryProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-fed18432d2"></span>

### FrozenColumnCountProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.FrozenColumnCount](xref:Avalonia.Controls.TreeDataGrid.FrozenColumnCount) property.

```csharp
public Avalonia.StyledProperty<int> FrozenColumnCountProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3ea6fd37c9"></span>

### ItemsSourceProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.ItemsSource](xref:Avalonia.Controls.TreeDataGrid.ItemsSource) property.

```csharp
public Avalonia.StyledProperty<System.Collections.IEnumerable> ItemsSourceProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-72916572e8"></span>

### RowDragOverEvent Field

Defines the [Avalonia.Controls.TreeDataGrid.RowDragOver](xref:Avalonia.Controls.TreeDataGrid.RowDragOver) event.

```csharp
public Avalonia.Interactivity.RoutedEvent<Avalonia.Controls.TreeDataGridRowDragEventArgs> RowDragOverEvent
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c209c5ad1b"></span>

### RowDragStartedEvent Field

Defines the [Avalonia.Controls.TreeDataGrid.RowDragStarted](xref:Avalonia.Controls.TreeDataGrid.RowDragStarted) event.

```csharp
public Avalonia.Interactivity.RoutedEvent<Avalonia.Controls.TreeDataGridRowDragStartedEventArgs> RowDragStartedEvent
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8fc7fd2958"></span>

### RowDropEvent Field

Defines the [Avalonia.Controls.TreeDataGrid.RowDrop](xref:Avalonia.Controls.TreeDataGrid.RowDrop) event.

```csharp
public Avalonia.Interactivity.RoutedEvent<Avalonia.Controls.TreeDataGridRowDragEventArgs> RowDropEvent
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c5d4ac0415"></span>

### RowThemeProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.RowTheme](xref:Avalonia.Controls.TreeDataGrid.RowTheme) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Styling.ControlTheme> RowThemeProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5509310c09"></span>

### RowsProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.Rows](xref:Avalonia.Controls.TreeDataGrid.Rows) property.

```csharp
public Avalonia.DirectProperty<Avalonia.Controls.TreeDataGrid, Avalonia.Controls.TreeDataGridRows> RowsProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-08cc70c372"></span>

### ScrollProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.Scroll](xref:Avalonia.Controls.TreeDataGrid.Scroll) property.

```csharp
public Avalonia.DirectProperty<Avalonia.Controls.TreeDataGrid, Avalonia.Controls.Primitives.IScrollable> ScrollProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-65bed0bf35"></span>

### SelectionModeProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.SelectionMode](xref:Avalonia.Controls.TreeDataGrid.SelectionMode) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Controls.TreeDataGridSelectionMode> SelectionModeProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9f04ca0697"></span>

### ShowColumnHeadersProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.ShowColumnHeaders](xref:Avalonia.Controls.TreeDataGrid.ShowColumnHeaders) property.

```csharp
public Avalonia.StyledProperty<bool> ShowColumnHeadersProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9674443eba"></span>

### SourceProperty Field

Defines the [Avalonia.Controls.TreeDataGrid.Source](xref:Avalonia.Controls.TreeDataGrid.Source) property.

```csharp
public Avalonia.DirectProperty<Avalonia.Controls.TreeDataGrid, Avalonia.Controls.TreeDataGridSource> SourceProperty
```

</section>

## Events

| Name | Description |
| --- | --- |
| [CellClearing](#uid-20ac8ca23c) | Occurs when a cell is about to be cleared from the visual tree. |
| [CellPrepared](#uid-c5f8feb0a9) | Occurs when a cell has been prepared for display. |
| [CellValueChanged](#uid-0c4212a7d4) | Occurs when a cell's value has changed. |
| [RowClearing](#uid-47783471da) | Occurs when a row is about to be cleared from the visual tree. |
| [RowDragOver](#uid-9407f0f354) | Occurs when a drag operation is performed over a row. |
| [RowDragStarted](#uid-4880d72c4a) | Occurs when the user starts to drag a row. |
| [RowDrop](#uid-b8ba31b02a) | Occurs when a drop operation is performed on a row. |
| [RowPrepared](#uid-e14eb7a566) | Occurs when a row has been prepared for display. |
| [SelectionChanged](#uid-0cf9d27844) | Occurs when the selection in the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) changes. |
| [SelectionChanging](#uid-bc093c88e1) | Occurs before the selection in the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) changes. |
| [TemplateApplied](primitives/templatedcontrol.mdx#uid-d353f79b7c) | Raised when the control's template is applied. Inherited from [TemplatedControl](primitives/templatedcontrol.mdx). |
| [Loaded](control.mdx#uid-c0a1ac2bc3) | Occurs when the control has been fully constructed in the visual tree and both layout and render are complete. Inherited from [Control](control.mdx). |
| [SizeChanged](control.mdx#uid-6cfea6b6c5) | Occurs when the bounds (actual size) of the control have changed. Inherited from [Control](control.mdx). |
| [Unloaded](control.mdx#uid-fdfd878e56) | Occurs when the control is removed from the visual tree. Inherited from [Control](control.mdx). |
| [ContextCanceled](../input/inputelement.mdx#uid-0132e74ca9) | Occurs when the context input gesture continues into another gesture, to notify the element that the context flyout should not be opened. Inherited from [InputElement](../input/inputelement.mdx). |
| [ContextRequested](../input/inputelement.mdx#uid-9067484d6e) | Occurs when the user has completed a context input gesture, such as a right-click. Inherited from [InputElement](../input/inputelement.mdx). |
| [DoubleTapped](../input/inputelement.mdx#uid-ad13083e0c) | Occurs when the user briefly contacts and releases twice on a single point, without significant movement. Inherited from [InputElement](../input/inputelement.mdx). |
| [GettingFocus](../input/inputelement.mdx#uid-4d054164ee) | Occurs before the control receives focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [GotFocus](../input/inputelement.mdx#uid-d41d7ad59c) | Occurs when the control receives focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [Holding](../input/inputelement.mdx#uid-8cda030fe2) | Occurs when the user makes a single contact, then maintains contact beyond a given time threshold without releasing or making another contact. Inherited from [InputElement](../input/inputelement.mdx). |
| [KeyDown](../input/inputelement.mdx#uid-ee9d987ed5) | Occurs when a key is pressed while the control has focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [KeyUp](../input/inputelement.mdx#uid-1131e95f55) | Occurs when a key is released while the control has focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [LosingFocus](../input/inputelement.mdx#uid-425fe24716) | Occurs before the control loses focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [LostFocus](../input/inputelement.mdx#uid-2061fc85a1) | Occurs when the control loses focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [Pinch](../input/inputelement.mdx#uid-96b68421dc) | Occurs when the user moves two contact points closer together. Inherited from [InputElement](../input/inputelement.mdx). |
| [PinchEnded](../input/inputelement.mdx#uid-50614bd917) | Occurs when the user releases both contact points used in a pinch gesture. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerCaptureLost](../input/inputelement.mdx#uid-2121c500a4) | Occurs when the control or its child control loses the pointer capture for any reason, event will not be triggered for a parent control if capture was transferred to another child of that parent control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerEntered](../input/inputelement.mdx#uid-a81f2c5c9a) | Occurs when the pointer enters the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerExited](../input/inputelement.mdx#uid-522e8d0a47) | Occurs when the pointer leaves the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerMoved](../input/inputelement.mdx#uid-0990295ea3) | Occurs when the pointer moves over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerPressed](../input/inputelement.mdx#uid-913cdc0df1) | Occurs when the pointer is pressed over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerReleased](../input/inputelement.mdx#uid-5b59b21d5e) | Occurs when the pointer is released over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureMagnify](../input/inputelement.mdx#uid-8f1fe6dc4a) | Occurs when the user moves two contact points away from each other on a touchpad. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureRotate](../input/inputelement.mdx#uid-d966c43661) | Occurs when the user places two contact points and moves them in a circular motion on a touchpad. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerTouchPadGestureSwipe](../input/inputelement.mdx#uid-9011c6de89) | Occurs when the user performs a rapid dragging motion in a single direction on a touchpad. Inherited from [InputElement](../input/inputelement.mdx). |
| [PointerWheelChanged](../input/inputelement.mdx#uid-6687ab6f2e) | Occurs when the mouse is scrolled over the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PullGesture](../input/inputelement.mdx#uid-d85f52cac5) | Occurs when the user drags from the edge of a control. Inherited from [InputElement](../input/inputelement.mdx). |
| [PullGestureEnded](../input/inputelement.mdx#uid-a37f51b846) | Occurs when the user releases the pointer after a pull gesture. Inherited from [InputElement](../input/inputelement.mdx). |
| [RightTapped](../input/inputelement.mdx#uid-11a576692d) | Occurs when the user briefly contacts and releases a single point, without significant movement, using a mechanism on the input device recognized as a right button or equivalent. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGesture](../input/inputelement.mdx#uid-b571ab3acc) | Occurs when the user continuously moves the pointer in the same direction within the control’s boundaries. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureEnded](../input/inputelement.mdx#uid-eb3914c3a8) | Occurs when a scroll gesture has fully stopped, taking into account any inertial movement that continues the scroll after the user has released the pointer. Inherited from [InputElement](../input/inputelement.mdx). |
| [ScrollGestureInertiaStarting](../input/inputelement.mdx#uid-c8cd2731a5) | Occurs within a scroll gesture, when the user releases the pointer, and scrolling continues by transitioning to momentum-based gliding movement. Inherited from [InputElement](../input/inputelement.mdx). |
| [SwipeGesture](../input/inputelement.mdx#uid-0f4fc613ec) | Occurs when the user rapidly drags the pointer in a single direction across the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [SwipeGestureEnded](../input/inputelement.mdx#uid-137ae2fd9d) | Occurs when a swipe gesture ends on the control. Inherited from [InputElement](../input/inputelement.mdx). |
| [Tapped](../input/inputelement.mdx#uid-6df36c079d) | Occurs when the user briefly contacts and releases a single point, without significant movement. Inherited from [InputElement](../input/inputelement.mdx). |
| [TextInput](../input/inputelement.mdx#uid-6dcb8fae07) | Occurs when a user typed some text while the control has focus. Inherited from [InputElement](../input/inputelement.mdx). |
| [TextInputMethodClientRequested](../input/inputelement.mdx#uid-5d96b89080) | Occurs when an input element gains input focus and input method is looking for the corresponding client Inherited from [InputElement](../input/inputelement.mdx). |
| [EffectiveViewportChanged](../layout/layoutable.mdx#uid-1922b89fa5) | Occurs when the element's effective viewport changes. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [LayoutUpdated](../layout/layoutable.mdx#uid-05ea32f689) | Occurs when a layout pass completes for the control. Inherited from [Layoutable](../layout/layoutable.mdx). |
| [AttachedToVisualTree](../visual.mdx#uid-df40bddf6b) | Raised when the control is attached to a rooted visual tree. Inherited from [Visual](../visual.mdx). |
| [DetachedFromVisualTree](../visual.mdx#uid-3f64dafb1c) | Raised when the control is detached from a rooted visual tree. Inherited from [Visual](../visual.mdx). |
| [ActualThemeVariantChanged](../styledelement.mdx#uid-e69ef27e71) | Raised when the theme variant is changed on the element or an ancestor of the element. Inherited from [StyledElement](../styledelement.mdx). |
| [AttachedToLogicalTree](../styledelement.mdx#uid-717aa68e85) | Raised when the styled element is attached to a rooted logical tree. Inherited from [StyledElement](../styledelement.mdx). |
| [DataContextChanged](../styledelement.mdx#uid-4b1cc873f8) | Occurs when the [Avalonia.StyledElement.DataContext](xref:Avalonia.StyledElement.DataContext) property changes. Inherited from [StyledElement](../styledelement.mdx). |
| [DetachedFromLogicalTree](../styledelement.mdx#uid-d9f5afa535) | Raised when the styled element is detached from a rooted logical tree. Inherited from [StyledElement](../styledelement.mdx). |
| [Initialized](../styledelement.mdx#uid-bd6a5e5c0e) | Occurs when the styled element has finished initialization. Inherited from [StyledElement](../styledelement.mdx). |
| [ResourcesChanged](../styledelement.mdx#uid-99a7f47c56) | Occurs when a resource in this styled element or a parent styled element has changed. Inherited from [StyledElement](../styledelement.mdx). |
| [PropertyChanged](../avaloniaobject.mdx#uid-d758e26fae) | Raised when a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value changes on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-20ac8ca23c"></span>

### CellClearing Event

Occurs when a cell is about to be cleared from the visual tree.

```csharp
public event EventHandler<Avalonia.Controls.TreeDataGridCellEventArgs> CellClearing
```

#### Remarks

A cell is cleared when it is no longer needed for display, such as when it is scrolled
out of view or when the data is removed from the data source. This event can be used
to perform any necessary cleanup or state management before a cell is removed from the
visual tree.

</section>

<section className="apiref-page__member-entry">

<span id="uid-c5f8feb0a9"></span>

### CellPrepared Event

Occurs when a cell has been prepared for display.

```csharp
public event EventHandler<Avalonia.Controls.TreeDataGridCellEventArgs> CellPrepared
```

#### Remarks

A cell is prepared when it is created and bound to data for display. This event can be
used to customize the appearance or behavior of the cell before it is rendered.

</section>

<section className="apiref-page__member-entry">

<span id="uid-0c4212a7d4"></span>

### CellValueChanged Event

Occurs when a cell's value has changed.

```csharp
public event EventHandler<Avalonia.Controls.TreeDataGridCellEventArgs> CellValueChanged
```

#### Remarks

This event is raised after the cell's value has been updated, either through user
interaction or programmatically. It can be used to respond to changes in cell values,
such as updating related data or triggering validation.

</section>

<section className="apiref-page__member-entry">

<span id="uid-47783471da"></span>

### RowClearing Event

Occurs when a row is about to be cleared from the visual tree.

```csharp
public event EventHandler<Avalonia.Controls.TreeDataGridRowEventArgs> RowClearing
```

#### Remarks

A row is cleared when it is no longer needed for display, such as when it is scrolled
out of view or when the data is removed from the data source. This event can be used
to perform any necessary cleanup or state management before a row is removed from the
visual tree.

</section>

<section className="apiref-page__member-entry">

<span id="uid-9407f0f354"></span>

### RowDragOver Event

Occurs when a drag operation is performed over a row.

```csharp
public event EventHandler<Avalonia.Controls.TreeDataGridRowDragEventArgs> RowDragOver
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-4880d72c4a"></span>

### RowDragStarted Event

Occurs when the user starts to drag a row.

```csharp
public event EventHandler<Avalonia.Controls.TreeDataGridRowDragStartedEventArgs> RowDragStarted
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b8ba31b02a"></span>

### RowDrop Event

Occurs when a drop operation is performed on a row.

```csharp
public event EventHandler<Avalonia.Controls.TreeDataGridRowDragEventArgs> RowDrop
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e14eb7a566"></span>

### RowPrepared Event

Occurs when a row has been prepared for display.

```csharp
public event EventHandler<Avalonia.Controls.TreeDataGridRowEventArgs> RowPrepared
```

#### Remarks

A row is prepared when it is created and bound to data for display. This event can be
used to customize the appearance or behavior of the row before it is rendered.

</section>

<section className="apiref-page__member-entry">

<span id="uid-0cf9d27844"></span>

### SelectionChanged Event

Occurs when the selection in the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) changes.

```csharp
public event EventHandler<Avalonia.Controls.Selection.TreeDataGridSelectionChangedEventArgs> SelectionChanged
```

#### Remarks

This event is forwarded from the underlying selection model's
[Avalonia.Controls.Selection.TreeDataGridSelectionModel.SelectionChanged](xref:Avalonia.Controls.Selection.TreeDataGridSelectionModel.SelectionChanged) event, providing unified
event args with row and cell index information.

</section>

<section className="apiref-page__member-entry">

<span id="uid-bc093c88e1"></span>

### SelectionChanging Event

Occurs before the selection in the [TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid) changes.

```csharp
public event System.ComponentModel.CancelEventHandler SelectionChanging
```

#### Remarks

This event can be cancelled to prevent the selection from changing.

</section>

</ApiRefPage>

